# historian

./: AGENTS.md  HISTORIAN_INTEGRATION.md  README.md  ROADMAP.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml
docs/: debugging.md
historian/: builtin_manifest.json  cli.py  client.py  config.example.json  config.py  debug.py  http.py  models.py  resolver.py  service.py  storage.py
tests/: test_cli.py  test_client.py  test_config.py  test_debug.py  test_http.py  test_query.py  test_resolver.py  test_storage.py
