[project]
name = "historian"
version = "0.1.0"
description = "Local event, transcript, and operational-history service for agent applications."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "a2a-sdk>=1.1,<1.2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "jsonschema>=4.20,<5",
  "regex>=2024.5,<2027",
  "sse-starlette>=2.1,<4",
  "uvicorn>=0.30,<1",
]

[project.scripts]
historian = "historian.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["historian"]

[tool.hatch.build.targets.wheel.force-include]
"historian/builtin_manifest.json" = "historian/builtin_manifest.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
